--- a/css/style.css
+++ b/css/style.css
@@ -53,12 +53,14 @@ body {
     list-style-type: none;
 }
 
-.profile-overall-summary img {
+.edit a img {
     display: none;
 }
 
-.profile-overall-summary:hover img{
-    display: block;
+.edit:hover a img{
+    margin-left: 10px;
+    margin-top: 5px;
+    display: block;    
 }
 
 .profile-overall-extra {
@@ -221,6 +223,7 @@ body {
     color: black;
     margin-top: 0px;
     margin-bottom: 4px;
+    cursor: pointer;
 }
 .info-title:hover {
     color: #006fa6;
